# riddle

./: README.md  report.html
quill/: build.sh
quill/scripts/: takeover.sh
quill/src/: scribble.c
riddle/: Cargo.toml  build-rm2.sh  build-takeover.sh  external.manifest.rm2.json
riddle/.cargo/: config.toml
riddle/scripts/: appload-launch-rm2.sh  appload-launch.sh  make-bundle-rm2.sh  riddle-takeover-rm2.sh  riddle-takeover.sh
riddle/src/: display.rs  evdev.rs  fb.rs  help.rs  main.rs  oracle.rs  pen.rs  power.rs  qtfb.rs  rm2fb.rs  touch.rs
